<resources>
    <string name="app_name">PhotoSeek</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_prompt">Enter search query</string>
    <string name="image_title">Image Title</string>
    <string name="image_source">Image Source</string>
    <string name="title_activity_full_image">Full Image</string>
    <string name="full_image">Full Image</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="title_activity_advanced_settings">Advanced Filter Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enter_site_filter">Enter Site Filter</string>
</resources>
