<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.gridimagesearch.activities.AdvancedSettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:layout_alignTop="@+id/spnrImageSize"
        android:layout_alignRight="@+id/tvImageType"
        android:layout_alignEnd="@+id/tvImageType" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrImageSize"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_toEndOf="@+id/tvImageSize"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_alignTop="@+id/spnrImageColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrImageColor"
        android:layout_below="@+id/spnrImageSize"
        android:layout_alignLeft="@+id/spnrImageSize"
        android:layout_alignStart="@+id/spnrImageSize"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/spnrImageColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnrImageType"
        android:layout_below="@+id/spnrImageColor"
        android:layout_alignLeft="@+id/spnrImageColor"
        android:layout_alignStart="@+id/spnrImageColor"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/spnrImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spnrImageType"
        android:layout_alignLeft="@+id/spnrImageSize"
        android:layout_alignStart="@+id/spnrImageSize"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_site_filter" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/etSiteFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="40dp"
        android:onClick="onSave" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_below="@+id/etSiteFilter"
        android:layout_alignRight="@+id/etSiteFilter"
        android:layout_alignEnd="@+id/etSiteFilter"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:onClick="onCancel" />

</RelativeLayout>
